# StudentFlow

./: .env.example  .gitignore  LICENSE  app_updates.txt  build.sh  db.sqlite3  deploy.sh  info.txt  pyproject.toml  requirements.txt
apps/organization/: admin.py  forms.py  models.py  urls.py  views.py
apps/organization/migrations/: 0001_initial.py  0002_alter_organization_options.py
apps/pages/: admin.py  models.py  urls.py  views.py
apps/pages/migrations/: 0001_initial.py
apps/pages/templatetags/: custom_tags.py
apps/student/: admin.py  context_processor.py  export.py  filters.py  forms.py  models.py  resources.py  send_email_form.py  send_email_view.py  subscription_helpers.py  urls.py  views.py
apps/student/migrations/: 0001_initial.py  0002_course.py  0003_subscription.py  0004_course_user.py  0005_alter_course_organization.py  0006_alter_course_organization_alter_course_user.py  0007_alter_course_user.py  0008_student_course.py  0009_alter_student_course.py  0010_enrollment.py  0011_alter_course_user.py  0012_alter_course_options_alter_student_options_and_more.py  0013_alter_course_user.py
apps/student/services/: renew_subscription.py
apps/users/: admin.py  backends.py  choices.py  context_processor.py  export.py  filters.py  forms.py  middleware.py  models.py  password_change.py  resources.py  urls.py  validators.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_date_joined.py  0003_user_organization.py  0004_userfile.py  0005_rename_userfile_document.py  0006_vacation.py  0007_alter_vacation_days.py  0008_alter_document_file_employeedocument.py  0009_alter_document_file_alter_employeedocument_file.py  0010_alter_employeedocument_file.py  0011_alter_employeedocument_file.py  (+3 more)
config/: settings-deploy.py  settings.py  settings_deploy.py  urls.py
staticfiles/: staticfiles.json
templates/: 403.html  _base.html  home.html
templates/app/: course.html  course_form_modal.html  update_list.html
theme/static_src/: package-lock.json  tailwind.config.js
(+39 files in other folders)
