[tool.poetry]
name = "students"
version = "0.1.0"
description = "Managing Students Subscriptions"
authors = ["Konstantinos Vitiniotis <kostasvit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-import-export = "^4.1.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
node = "^1.2.2"
django-filter = "^24.3"
django-widget-tweaks = "^1.5.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.31.1"
django-encrypted-model-fields = "^0.6.5"
openpyxl = "^3.1.5"
boto3 = "^1.35.44"
django-storages = "^1.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
